--- a/templates/index.html
+++ b/templates/index.html
@@ -103,7 +103,7 @@
 
                     <input type="submit" class="btn btn-sm btn-primary" name="" value="Scrap it">
                 </form>
-                <form class="" action="home">
+                <form>
                     <input type="submit" class="btn btn-sm btn-primary btn-block" name="" value="Clear">
                   </form>
                 </div>
